--- a/rush.yaml
+++ b/rush.yaml
@@ -134342,3 +134342,615 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1042478
+---
+konami_id:
+name:
+  en: Peace Love Ángel
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ピースラヴ・アンヘル
+  ja_romaji: Pīsu Ravu Anheru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+summoning_condition:
+  en: |-
+    You can Tribute Summon this card in Attack Position by Tributing 1 monster with 0 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 1 monster with 0 ATK from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 2500 ATK until the end of your opponent's next turn. Then, you can add 1 "Love Shoot" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: WATER
+level: 7
+atk: 0
+def: 0
+series:
+- Love
+images:
+- index: 1
+  image: PeaceLoveÁngel-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP040
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043807
+---
+konami_id:
+name:
+  en: Love Ángel
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・アンヘル
+  ja_romaji: Ravu Anheru
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 1000 ATK until the end of this turn. Then, if you have a monster(s) in your Graveyard and their total ATK is 0, you can make all face-up monsters on your opponent's field lose 1500 ATK/DEF until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: WATER
+level: 5
+atk: 0
+def: 0
+series:
+- Love
+images:
+- index: 1
+  image: LoveÁngel-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP041
+    set_name: Over Rush Pack 2
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043808
+---
+konami_id:
+name:
+  en: Cutie Love Anela
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: キューティーラヴ・アーネラ
+  ja_romaji: Kyūtī Ravu Ānera
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send 1 card from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Up to 3 face-up monsters on your field with 0 original ATK gain 600 ATK until the end of this turn. Then, if you have a monster(s) in your Graveyard and their total ATK is 0, you can place 1 Spell/Trap Card from your opponent's field on the bottom of the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: EARTH
+level: 6
+atk: 0
+def: 0
+series:
+- Love
+images:
+- index: 1
+  image: CutieLoveAnela-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP042
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043809
+---
+konami_id:
+name:
+  en: Love Anela
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・アーネラ
+  ja_romaji: Ravu Ānera
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have 10 or more cards in your Deck, shuffle 3 non-Level 4 monsters with 0 ATK from your Graveyard into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: EARTH
+level: 4
+atk: 0
+def: 0
+series:
+- Love
+images:
+- index: 1
+  image: LoveAnela-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP043
+    set_name: Over Rush Pack 2
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043810
+---
+konami_id:
+name:
+  en: Love Dove
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・ダヴ
+  ja_romaji: Ravu Davu
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    During the turn you Normal Summoned this card, reveal 1 Fairy Type monster with 0 ATK in your hand to your opponent.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. Then, you can add 1 "Love Angel" or 1 "Love Safety" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fairy / Effect
+attribute: LIGHT
+level: 2
+atk: 0
+def: 1400
+series:
+- Love
+images:
+- index: 1
+  image: LoveDove-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP047
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043811
+---
+konami_id:
+name:
+  en: Love Shoot
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・シュート
+  ja_romaji: Ravu Shūto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, 1 face-up Fairy Type monster on your field with 0 original ATK gains 100 ATK and can attack directly. You can only attack directly with 1 monster this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Love
+images:
+- index: 1
+  image: LoveShoot-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP048
+    set_name: Over Rush Pack 2
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043812
+---
+konami_id:
+name:
+  en: Love Letter
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・レター
+  ja_romaji: Ravu Retā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have 3 or more monsters in your Graveyard and their total ATK is 0.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Add 1 Fairy Type monster with 0 ATK from your Graveyard to your hand. Then, you can add 1 "Love Memory" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+series:
+- Love
+images:
+- index: 1
+  image: LoveLetter-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP050
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043813
+---
+konami_id:
+name:
+  en: Love Safety
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・セーフティ
+  ja_romaji: Ravu Sēfuti
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Fairy Type monster on your field with 0 original ATK/DEF.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster and face-down cards in your Spell & Trap Zone cannot be destroyed by your opponent's card effects. While the equipped monster is face-up on your field, your opponent cannot declare an attack on monsters that are not equipped with an Equip Spell Card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+series:
+- Love
+images:
+- index: 1
+  image: LoveSafety-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP051
+    set_name: Over Rush Pack 2
+    rarities:
+    - Common
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043814
+---
+konami_id:
+name:
+  en: Love Protection
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・プロテクション
+  ja_romaji: Ravu Purotekushon
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent Normal or Special Summons a monster while you have a face-up Fairy Type monster on your field with 0 original ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Change the battle position of 1 monster on your opponent's field. Your opponent cannot activate the effects of that monster this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Love
+images:
+- index: 1
+  image: LoveProtection-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP052
+    set_name: Over Rush Pack 2
+    rarities:
+    - Ultra Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043815
+---
+konami_id:
+name:
+  en: Love Memory
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: ラヴ・メモリー
+  ja_romaji: Ravu Memorī
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When a monster(s) on your field is destroyed by an opponent's attack or their card effect.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 Fairy Type monster with 0 ATK from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+series:
+- Love
+images:
+- index: 1
+  image: LoveMemory-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP054
+    set_name: Over Rush Pack 2
+    rarities:
+    - Super Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1043816
