--- a/rush.yaml
+++ b/rush.yaml
@@ -134797,7 +134797,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    Equip this card to 1 face-up Fairy Type monster on your field with 0 original ATK/DEF.
+    Equip this card to 1 face-up Fairy Type monster on your field with 0 original ATK and DEF.
   de:
   es:
   fr:
