--- a/data/cards/17217034.yaml
+++ b/data/cards/17217034.yaml
@@ -25,7 +25,7 @@ text:
   pt:
   ja: |-
     光・闇属性モンスター２体
-    このカード名はルール上「閃刀姫」カードとしても扱う。自分は「合体術式－エンゲージ・ゼロ」を１ターンに１度しか特殊召喚できず、このカードはL素材にできない。①：このカードが特殊召喚した場合、フィールドの攻撃力２５００以上のモンスター１体を対象として発動できる。そのモンスターの効果をターン終了時まで無効にする。②：自分の墓地に「閃刀姫－レイ」及び「閃刀姫－ロゼ」が存在する場合、このカードが攻撃するダメージステップ開始時に発動できる。相手フィールドのモンスターを全て破壊する。
+    このカード名はルール上「閃刀姫」カードとしても扱う。自分は「合体術式－エンゲージ・ゼロ」を１ターンに１度しか特殊召喚できず、このカードはＬ素材にできない。①：このカードが特殊召喚した場合、フィールドの攻撃力２５００以上のモンスター１体を対象として発動できる。そのモンスターの効果をターン終了時まで無効にする。②：自分の墓地に「閃刀姫－レイ」及び「閃刀姫－ロゼ」が存在する場合、このカードが攻撃するダメージステップ開始時に発動できる。相手フィールドのモンスターを全て破壊する。
   ko:
   zh-TW:
   zh-CN:
