--- a/data/rush/17694.yaml
+++ b/data/rush/17694.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Bubble Era
 images:
 - index: 1
   image: MothersStorm-RDMRP1-JP-C.png
