--- a/data/rush/19585.yaml
+++ b/data/rush/19585.yaml
@@ -42,6 +42,8 @@ effect:
   zh-CN:
 card_type: Spell
 property: Normal
+series:
+- Psychic Musician
 images:
 - index: 1
   image: MyPatienceHasRunOut-RDMRP2-JP-C.png
