--- a/data/rush/yugipedia1044876.yaml
+++ b/data/rush/yugipedia1044876.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    During your Main Phase this card was Special Summoned.
+    During your Main Phase that you Special Summoned this card.
   de:
   es:
   fr:
