--- a/data/cards/03078380.yaml
+++ b/data/cards/03078380.yaml
@@ -27,7 +27,7 @@ text:
   pt: |-
     Você pode enviar para o Cemitério 1 monstro Mago ou 1 Magia/Armadilha que mencione "Mago Negro", da sua mão ou do campo com a face para cima; Invoque este card por Invocação-Especial da sua mão. Durante sua Fase Principal: você pode Invocar por Invocação-Fusão 1 Monstro de Fusão do seu Deck Adicional, usando monstros da sua mão ou do campo como matéria, incluindo um monstro Mago. Você só pode usar cada efeito de "Timaeus, o Dragão Unido" uma vez por turno.
   ja: |-
-    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：手札及び自分フィールドの表側表示のカードの中から、魔法使い族モンスター１体または「ブラック・マジシャン」のカード名が記された魔法・罠カード１枚を墓地へ送って発動できる。このカードを手札から特殊召喚する。②：自分メインフェイズに発動できる。自分の手札・フィールドから、融合モンスターカードによって決められた、魔法使い族モンスターを含む融合素材モンスターを墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。①：このカードが手札に存在する場合、自分の手札・フィールド（表側表示）から魔法使い族モンスター１体または「ブラック・マジシャン」のカード名が記された魔法・罠カード１枚を墓地へ送って発動できる。このカードを特殊召喚する。②：自分メインフェイズに発動できる。魔法使い族モンスターを含む、自分の手札・フィールドのモンスターを融合素材とし、融合モンスター１体を融合召喚する。
   ko: |-
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패 및 자신 필드의 앞면 표시의 카드 중에서, 마법사족 몬스터 1장 또는 "블랙 매지션"의 카드명이 쓰여진 마법 / 함정 카드 1장을 묘지로 보내고 발동할 수 있다. 이 카드를 패에서 특수 소환한다. ②: 자신 메인 페이즈에 발동할 수 있다. 자신의 패 / 필드에서, 융합 몬스터 카드에 기재된, 마법사족 몬스터를 포함하는 융합 소재 몬스터를 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
   zh-TW: |-
@@ -94,6 +94,12 @@ sets:
     set_name: Battle of Chaos
     rarities:
     - Rare
+  - set_number: QCCU-JP006
+    set_name: Quarter Century Chronicle side:Unity
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: BACH-KR003
     set_name: Battle of Chaos
