--- a/data/cards/59514116.yaml
+++ b/data/cards/59514116.yaml
@@ -39,7 +39,7 @@ text:
     ● Invoque por Invocação-Fusão 1 Monstro de Fusão do seu Deck Adicional, usando monstros da sua mão ou do campo, incluindo "Mago Negro" ou "Pequena Maga Negra", como Matérias de Fusão.
     ● Invoque por Invocação-Ritual 1 Monstro de Ritual da sua mão, ao oferecer como Tributo monstros da sua mão ou do campo, incluindo "Mago Negro" ou "Pequena Maga Negra", cuja soma dos Níveis seja igual ou exceda o Nível do Monstro de Ritual.
   ja: |-
-    ①：以下の効果から１つを選択して発動できる。●融合モンスターカードによって決められた、「ブラック・マジシャン」または「ブラック・マジシャン・ガール」を含む融合素材モンスターを自分の手札・フィールドから墓地へ送り、その融合モンスター１体をＥＸデッキから融合召喚する。●レベルの合計が儀式召喚するモンスターのレベル以上になるように、「ブラック・マジシャン」または「ブラック・マジシャン・ガール」を含む自分の手札・フィールドのモンスターをリリースし、手札から儀式モンスター１体を儀式召喚する。
+    ①：以下の効果から１つを選択して発動できる。●「ブラック・マジシャン」か「ブラック・マジシャン・ガール」を含む、自分の手札・フィールドのモンスターを融合素材とし、融合モンスター１体を融合召喚する。●レベルの合計が儀式召喚するモンスターのレベル以上になるように、「ブラック・マジシャン」か「ブラック・マジシャン・ガール」を含む自分の手札・フィールドのモンスターをリリースし、手札から儀式モンスター１体を儀式召喚する。
   ko: |-
     ①: 이하의 효과에서 1개를 선택하고 발동할 수 있다.
     ●융합 몬스터 카드에 기재된, "블랙 매지션" 또는 "블랙 매지션 걸"을 포함하는 융합 소재 몬스터를 자신의 패 / 필드에서 묘지로 보내고, 그 융합 몬스터 1장을 엑스트라 덱에서 융합 소환한다.
@@ -49,7 +49,7 @@ text:
     ●將根據融合怪獸卡決定的，包含「黑魔導」或「黑魔導女孩」在內的融合素材怪獸從我方手牌・場上送至墓地，從額外牌組融合召喚１隻該融合怪獸。
     ●為使等級合計為儀式召喚怪獸的等級以上，解放我方手牌・場上的包含「黑魔導」或「黑魔導女孩」在內的怪獸，從手牌儀式召喚１隻儀式怪獸。
   zh-CN: |-
-    ①：可从以下效果中选择1个发动。●将由融合怪兽卡决定的、包括"黑魔导"或"黑魔导女孩"在内的融合素材怪兽从自己的手牌・场上送至墓地，从额外牌组将1只该融合怪兽融合召唤。●为使合计等级为仪式召唤的怪兽以上，解放自己手牌・场上包括"黑魔导"或"黑魔导女孩"在内的怪兽，从手牌将1只仪式怪兽仪式召唤。
+    ①：可从以下效果中选择1个发动。●将由融合怪兽卡决定的、包括“黑魔导”或“黑魔导女孩”在内的融合素材怪兽从自己的手牌・场上送至墓地，从额外牌组将1只该融合怪兽融合召唤。●为使合计等级为仪式召唤的怪兽以上，解放自己手牌・场上包括“黑魔导”或“黑魔导女孩”在内的怪兽，从手牌将1只仪式怪兽仪式召唤。
 card_type: Spell
 property: Quick-Play
 images:
@@ -110,6 +110,12 @@ sets:
     set_name: Tournament Pack 2021 Vol.4
     rarities:
     - Super Rare
+  - set_number: QCCU-JP011
+    set_name: Quarter Century Chronicle side:Unity
+    rarities:
+    - Super Rare
+    - Secret Rare
+    - Quarter Century Secret Rare
   ko:
   - set_number: DP23-KR004
     set_name: 'Duelist Pack: Legend Duelist 6'
