--- a/rush.yaml
+++ b/rush.yaml
@@ -136268,3 +136268,123 @@ is_translation_unofficial:
   text:
     en: true
 yugipedia_page_id: 1044876
+---
+konami_id:
+name:
+  en: Animagica Leader
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: アニマジカ・リーダー
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 2 Level 4 or lower monsters with 900 or less DEF from your Graveyard face-up to your field. You cannot activate the effects of Level 8 or lower monsters for the rest of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Beast / Effect
+attribute: LIGHT
+level: 7
+atk: 2500
+def: 1500
+images:
+- index: 1
+  image: AnimagicaLeader-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP074
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1045074
+---
+konami_id:
+name:
+  en: Tribute Kaiser
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: カイザー・トリビュート
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Reduce the Level of 1 face-up Level 3-8 Effect Monster on your opponent's field by 2 until the end of this turn. Then, you can add 1 Level 8 monster with 2400 ATK/1000 DEF from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: EARTH
+level: 3
+atk: 800
+def: 1000
+images:
+- index: 1
+  image: TributeKaiser-RDORP2-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/ORP2-JP073
+    set_name: Over Rush Pack 2
+    rarities:
+    - Over Rush Rare
+is_translation_unofficial:
+  name:
+    en: true
+  text:
+    en: true
+yugipedia_page_id: 1045076
