--- a/rush.yaml
+++ b/rush.yaml
@@ -42972,7 +42972,7 @@ yugipedia_page_id: 715533
 ---
 konami_id: 16791
 name:
-  en: Sigilstate Sol
+  en: Sigurstate Sol
   de:
   es:
   fr:
@@ -43020,7 +43020,7 @@ atk: 2500
 def: 0
 images:
 - index: 1
-  image: SigilstateSol-RDSBD6-JP-C.png
+  image: SigurstateSol-RDSBD6-JP-C.png
 sets:
   ja:
   - set_number: RD/SBD6-JP004
@@ -43033,8 +43033,6 @@ sets:
     rarities:
     - Common
 is_translation_unofficial:
-  name:
-    en: true
   text:
     en: true
 yugipedia_page_id: 716701
@@ -50990,7 +50988,7 @@ atk: 2800
 def: 2100
 materials:
   en: |-
-    "Sigilstate Sol" + "Connector Dog"
+    "Sigurstate Sol" + "Connector Dog"
   de:
   es:
   fr:
