--- a/data/cards/07153114.yaml
+++ b/data/cards/07153114.yaml
@@ -31,7 +31,7 @@ text:
   ko: |-
     이 카드가 필드 위에 존재하는 한, 서로 필드 마법 카드를 파괴할 수 없으며, 필드 마법 카드의 발동도 할 수 없다. "필드 베리어"는 자신 필드 위에 1장밖에 앞면 표시로 존재할 수 없다.
   zh-TW: |-
-    只要此卡存在於場上，場上魔法卡就不會被破壞，雙方無法發動場地魔法卡。「場地屏障」在我方場上僅限以正面表示存在１張。
+    只要此卡存在於場上，場地魔法卡就不會被破壞，雙方無法發動場地魔法卡。「場地屏障」在我方場上僅限以正面表示存在１張。
   zh-CN: |-
     只要这张卡在场上存在，双方不能把场地魔法卡破坏，也不能作场地魔法卡的发动。「场地防护罩」在自己场上只能有1张表侧表示存在。
 card_type: Spell
