--- a/data/cards/13070280.yaml
+++ b/data/cards/13070280.yaml
@@ -7,8 +7,8 @@ name:
   fr: Jeu de Tistina
   it: Gioco di Tistina
   pt: Jogo da Tistina
-  ja:
-  ja_romaji:
+  ja: ティスティナの<ruby>戯<rt>たわむ</rt></ruby>れ
+  ja_romaji: Tisutina no Tawamure
   ko:
   ko_rr:
   zh-TW:
@@ -26,10 +26,15 @@ text:
     Evoca Specialmente 1 mostro "Tistina" dalla tua mano o Cimitero in Posizione di Difesa, ma fallo ritornare nella mano durante la End Phase. Puoi attivare solo 1 "Gioco di Tistina" per turno.
   pt: |-
     Invoque por Invocação-Especial 1 monstro "Tistina" da sua mão ou do Cemitério em Posição de Defesa, mas devolva-o para a mão durante a Fase Final. Você só pode ativar 1 "Jogo da Tistina" por turno.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。
+    ①：自分の手札・墓地から「ティスティナ」モンスター１体を守備表示で特殊召喚する。この効果で特殊召喚したモンスターはエンドフェイズに手札に戻る。
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신의 패 / 묘지에서 "티스티나" 몬스터 1장을 수비 표시로 특수 소환한다. 이 효과로 특수 소환한 몬스터는 엔드 페이즈에 패로 되돌아간다.
+  zh-TW: |-
+    此卡名的卡１回合僅限發動１張。 ①：從我方手牌・墓地以守備表示特殊召喚１隻「緹斯緹那」怪獸。透過此效果特殊召喚的怪獸，在結束階段將回到手牌。
+  zh-CN: |-
+    此卡名的卡１回合仅可发动１张。 ①：从自己的手牌・墓地将１只“蒂斯媞娜”怪兽以守备表示特殊召唤。以此效果特殊召唤的怪兽于结束阶段放回手牌。
 card_type: Spell
 property: Quick-Play
 series:
@@ -67,3 +72,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019289
+master_duel_rarity: SR
