--- a/data/cards/13510157.yaml
+++ b/data/cards/13510157.yaml
@@ -7,8 +7,8 @@ name:
   fr: Chien de Meute de Tistina
   it: Segugio di Tistina
   pt: Cão da Tistina
-  ja:
-  ja_romaji:
+  ja: ティスティナの<ruby>猟<rt>りょう</rt></ruby><ruby>犬<rt>けん</rt></ruby>
+  ja_romaji: Tisutina no Ryōken
   ko:
   ko_rr:
   zh-TW:
@@ -26,10 +26,16 @@ text:
     Se questa carta è nella tua mano o Cimitero e tu controlli un mostro LUCE "Tistina": puoi Evocare Specialmente questa carta. Puoi utilizzare questo effetto di "Segugio di Tistina" una sola volta per turno. I mostri "Tistina" che controlli possono attaccare direttamente mentre il tuo avversario controlla un mostro coperto in Posizione di Difesa.
   pt: |-
     Se este card estiver na sua mão ou no Cemitério e você controlar um monstro "Tistina" de LUZ: você pode Invocar este card por Invocação-Especial. Você só pode usar este efeito de "Cão da Tistina" uma vez por turno. Monstros "Tistina" que você controla podem atacar diretamente enquanto seu oponente controlar um monstro com a face para baixo em Posição de Defesa.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    このカード名の①の効果は１ターンに１度しか使用できない。
+    ①：このカードが手札・墓地に存在し、自分フィールドに光属性の「ティスティナ」モンスターが存在する場合に発動できる。このカードを特殊召喚する。
+    ②：相手フィールドに裏側守備表示モンスターが存在する限り、自分の「ティスティナ」モンスターは直接攻撃できる。
+  ko: |-
+    이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패 / 묘지에 존재하고, 자신 필드에 빛 속성의 "티스티나" 몬스터가 존재할 경우에 발동할 수 있다. 이 카드를 특수 소환한다. ②: 상대 필드에 뒷면 수비 표시 몬스터가 존재하는 한, 자신의 "티스티나" 몬스터는 직접 공격할 수 있다.
+  zh-TW: |-
+    此卡名的①效果，１回合僅限使用１次。 ①：可在此卡存在於手牌・墓地，我方場上存在光屬性的「緹斯緹那」怪獸的狀況下發動。特殊召喚此卡。 ②：只要對方場上存在反面守備表示怪獸，我方的「緹斯緹那」怪獸就可以直接攻擊。
+  zh-CN: |-
+    此卡名的①效果１回合仅可使用１次。 ①：此卡存在于手牌・墓地，且自己场上存在光属性“蒂斯媞娜”怪兽的情况下可以发动。将此卡特殊召唤。 ②：只要对手场上存在里侧守备表示怪兽，自己的“蒂斯媞娜”怪兽可直接攻击。
 card_type: Monster
 monster_type_line: Aqua / Effect
 attribute: EARTH
@@ -71,3 +77,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993294
+master_duel_rarity: N
