--- a/data/cards/24892828.yaml
+++ b/data/cards/24892828.yaml
@@ -7,8 +7,8 @@ name:
   fr: Revenant de Tistina
   it: Ritornato di Tistina
   pt: Retornado da Tistina
-  ja:
-  ja_romaji:
+  ja: ティスティナの<ruby>還<rt>かえ</rt></ruby>り<ruby>仔<rt>ご</rt></ruby>
+  ja_romaji: Tisutina no Kaerigo
   ko:
   ko_rr:
   zh-TW:
@@ -26,10 +26,16 @@ text:
     Se questa carta è nella tua mano: puoi scegliere come bersaglio 1 mostro "Tistina" che controlli, eccetto "Ritornato di Tistina"; Evoca Specialmente questa carta e, se lo fai, il suo Livello diventa il Livello di quel mostro scelto come bersaglio. Se questa carta è nel tuo Cimitero: puoi scegliere come bersaglio 1 Mostro Xyz Acqua che controlli; attacca questa carta a esso come materiale. Puoi utilizzare ogni effetto di "Ritornato di Tistina" una sola volta per turno.
   pt: |-
     Se este card estiver na sua mão: você pode escolher 1 monstro "Tistina" que você controla, exceto "Retornado da Tistina"; Invoque este card por Invocação-Especial e, se isso acontecer, seu Nível se torna o Nível do monstro alvo. Se este card estiver no seu Cemitério: você pode escolher 1 Monstro Xyz Aqua que você controla; associe este card a ele como matéria. Você só pode usar cada efeito de "Retornado da Tistina" uma vez por turno.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。
+    ①：このカードが手札に存在する場合、「ティスティナの還り仔」以外の自分フィールドの「ティスティナ」モンスター１体を対象として発動できる。このカードを特殊召喚する。この効果で特殊召喚したこのカードのレベルは、対象のモンスターと同じになる。
+    ②：このカードが墓地に存在する場合、自分フィールドの水族Ｘモンスター１体を対象として発動できる。このカードをそのモンスターのＸ素材とする。
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 이 카드가 패에 존재할 경우, "티스티나의 귀환자" 이외의 자신 필드의 "티스티나" 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 특수 소환한다. 이 효과로 특수 소환한 이 카드의 레벨은, 대상 몬스터와 같아진다. ②: 이 카드가 묘지에 존재할 경우, 자신 필드의 물족 엑시즈 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 그 몬스터의 엑시즈 소재로 한다.
+  zh-TW: |-
+    此卡名的①②效果，１回合各僅限使用１次。 ①：在此卡存在於手牌的狀況下，可將我方場上的１隻「緹斯緹那的回歸之子」以外的「緹斯緹那」怪獸做為對象發動。特殊召喚此卡。透過此效果特殊召喚的此卡的等級，變為與對象怪獸相同。 ②：在此卡存在於墓地的狀況下，可將我方場上的１隻水族超量怪獸做為對象發動。將此卡做為該怪獸的超量素材。
+  zh-CN: |-
+    此卡名的①②效果１回合仅可各使用１次。 ①：此卡存在于手牌的情况下，以自己场上“蒂斯媞娜的回归者”以外的１只“蒂斯媞娜”怪兽为对象可以发动。将此卡特殊召唤。以此效果特殊召唤的此卡的等级变为与对象怪兽相同。 ②：此卡存在于墓地的情况下，以自己场上的１只水族超量怪兽为对象可以发动。将此卡作为该怪兽的超量素材。
 card_type: Monster
 monster_type_line: Aqua / Effect
 attribute: FIRE
@@ -71,3 +77,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019296
+master_duel_rarity: R
