--- a/data/cards/50281477.yaml
+++ b/data/cards/50281477.yaml
@@ -7,8 +7,8 @@ name:
   fr: Contaminé de Tistina
   it: Contaminato di Tistina
   pt: Maculado da Tistina
-  ja:
-  ja_romaji:
+  ja: ティスティナの<ruby>瘴<rt>しょう</rt></ruby><ruby>神<rt>しん</rt></ruby>
+  ja_romaji: Tisutina no Shōshin
   ko:
   ko_rr:
   zh-TW:
@@ -26,10 +26,16 @@ text:
     Puoi Evocare tramite Tributo questa carta scoperta offrendo come Tributo 1 mostro coperto controllato dal tuo avversario. Il Livello di questa carta diventa 10 se è stata Evocata Normalmente/Posizionata. Se questa carta viene mandata al Cimitero, eccetto dal Terreno: puoi scegliere come bersaglio 1 mostro "Tistina" che controlli; in questo turno, esso può effettuare un secondo attacco durante ogni Battle Phase, inoltre puoi attaccare solo con 1 mostro.
   pt: |-
     Você pode Invocar este card por Invocação-Tributo com a face para cima ao oferecer como Tributo 1 monstro com a face para baixo que seu oponente controla. O Nível deste card se torna 10 se ele foi Invocado por Invocação-Normal/Baixado. Se este card for enviado para o Cemitério, exceto do campo: você pode escolher 1 monstro "Tistina" que você controla; neste turno, ele pode realizar um segundo ataque durante cada Fase de Batalha e, além disso, você só pode atacar com 1 monstro.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    このカードは相手フィールドの裏側表示モンスター１体をリリースして表側表示でアドバンス召喚できる。
+    ①：通常召喚したこのカードのレベルは１０になる。
+    ②：このカードがフィールド以外から墓地へ送られた場合、自分フィールドの「ティスティナ」モンスター１体を対象として発動できる。このターン、自分はモンスター１体でしか攻撃できず、対象のモンスターは１度のバトルフェイズ中に２回攻撃できる。
+  ko: |-
+    이 카드는 상대 필드의 뒷면 표시 몬스터 1장을 릴리스하고 앞면 표시로 어드밴스 소환할 수 있다. ①: 통상 소환한 이 카드의 레벨은 10 이 된다. ②: 이 카드가 필드 이외에서 묘지로 보내졌을 경우, 자신 필드의 "티스티나" 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 턴에, 자신은 몬스터 1장으로밖에 공격할 수 없으며, 대상 몬스터는 1번의 배틀 페이즈 중에 2회 공격할 수 있다.
+  zh-TW: |-
+    可解放對方場上的１隻反面表示怪獸，以正面表示升級召喚此卡。 ①：通常召喚的此卡的等級變為１０。 ②：在此卡從場上以外被送至墓地的狀況下，可將我方場上的１隻「緹斯緹那」怪獸做為對象發動。此回合，我方僅限以１隻怪獸進行攻擊，對象怪獸在１次戰鬥階段中可攻擊２次。
+  zh-CN: |-
+    此卡可以解放对手场上的１只里侧表示怪兽，并以表侧表示上级召唤。 ①：通常召唤的此卡的等级变为１０。 ②：此卡从场上以外被送至墓地的情况下，以自己场上的１只“蒂斯媞娜”怪兽为对象可以发动。此回合，自己仅可攻击１只怪兽，对象怪兽在１次战斗阶段中可攻击２次。
 card_type: Monster
 monster_type_line: Aqua / Effect
 attribute: DARK
@@ -76,3 +82,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019304
+master_duel_rarity: R
