--- a/data/cards/50727844.yaml
+++ b/data/cards/50727844.yaml
@@ -7,8 +7,8 @@ name:
   fr: Retour de Force Synchro
   it: Synchro Allontanaforza
   pt: Força de Retorno Sincro
-  ja:
-  ja_romaji:
+  ja: シンクロ・フォースバック
+  ja_romaji: Shinkuro Fōsubakku
   ko:
   ko_rr:
   zh-TW:
@@ -26,10 +26,15 @@ text:
     Scegli come bersaglio mostri sul Terreno, fino al numero di Mostri Synchro con nomi diversi che controlli; falli ritornare nella mano. Puoi attivare solo 1 "Synchro Allontanaforza" per turno.
   pt: |-
     Escolha monstros no campo, até o número de Monstros Sincro com nomes diferentes que você controla; devolva-os para a mão. Você só pode ativar 1 "Força de Retorno Sincro" por turno.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    このカード名のカードは１ターンに１枚しか発動できない。
+    ①：自分フィールドのＳモンスターの種類の数まで、フィールドのモンスターを対象として発動できる。そのカードを手札に戻す。
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 필드의 싱크로 몬스터의 종류의 수까지, 필드의 몬스터를 대상으로 하고 발동할 수 있다. 그 카드를 패로 되돌린다.
+  zh-TW: |-
+    此卡名的卡１回合僅限發動１張。 ①：可將場上的怪獸做為對象發動，數量最多為我方場上的同步怪獸的種類的數量。將該卡送回手牌。
+  zh-CN: |-
+    此卡名的卡１回合仅可发动１张。 ①：以场上的怪兽为对象可以发动，数量最多为自己场上同步怪兽的数量。将该卡放回手牌。
 card_type: Trap
 property: Normal
 series:
@@ -67,3 +72,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993285
+master_duel_rarity: SR
