--- a/data/cards/58882608.yaml
+++ b/data/cards/58882608.yaml
@@ -7,8 +7,8 @@ name:
   fr: Souffle de Tistina
   it: Soffio di Tistina
   pt: Sopro da Tistina
-  ja:
-  ja_romaji:
+  ja: ティスティナの<ruby>息<rt>い</rt></ruby><ruby>吹<rt>ぶき</rt></ruby>
+  ja_romaji: Tisutina no Ibuki
   ko:
   ko_rr:
   zh-TW:
@@ -26,10 +26,16 @@ text:
     Durante la tua Main Phase, puoi Evocare Normalmente 1 mostro "Tistina", in aggiunta alla tua Evocazione Normale/Posizionamento. (Puoi guadagnare questo effetto una sola volta per turno.) Puoi scegliere come bersaglio 1 mostro scoperto che controlli o, se controlli un mostro LUCE "Tistina", puoi invece scegliere come bersaglio 1 mostro scoperto sul Terreno; metti quel mostro coperto in Posizione di Difesa, poi aggiungi 1 carta "Tistina" dal tuo Deck alla tua mano, eccetto "Soffio di Tistina". Puoi utilizzare questo effetto di "Soffio di Tistina" una sola volta per turno.
   pt: |-
     Durante sua Fase Principal, você pode Invocar por Invocação-Normal 1 monstro "Tistina" em adição à sua Invocação-Normal/Baixar (padrão). (Você só pode se aproveitar deste efeito uma vez por turno.) Você pode escolher 1 monstro com a face para cima que você controla ou, se você controlar um monstro "Tistina" de LUZ, em vez disso, você pode escolher 1 monstro com a face para cima no campo; coloque esse monstro com a face para baixo em Posição de Defesa e, depois, adicione 1 card "Tistina" do seu Deck à sua mão, exceto "Sopro da Tistina". Você só pode usar este efeito de "Sopro da Tistina" uma vez por turno.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    このカード名の②の効果は１ターンに１度しか使用できない。
+    ①：自分は通常召喚に加えて１度だけ、自分メインフェイズに「ティスティナ」モンスター１体を召喚できる。
+    ②：自分フィールドの表側表示モンスター１体を対象として発動できる（自分フィールドに光属性の「ティスティナ」モンスターが存在する場合、代わりに相手フィールドの表側表示モンスター１体を対象とする事もできる）。そのモンスターを裏側守備表示にする。その後、「ティスティナの息吹」以外の「ティスティナ」カード１枚をデッキから手札に加える。
+  ko: |-
+    이 카드명의 ②의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 자신은 통상 소환 외에도 1번만, 자신 메인 페이즈에 "티스티나" 몬스터 1장을 일반 소환할 수 있다. ②: 자신 필드의 앞면 표시 몬스터 1장을 대상으로 하고 발동할 수 있다(자신 필드에 빛 속성의 "티스티나" 몬스터가 존재할 경우, 대신에 상대 필드의 앞면 표시 몬스터 1장을 대상으로 할 수도 있다). 그 몬스터를 뒷면 수비 표시로 한다. 그 후, "티스티나의 입김" 이외의 "티스티나" 카드 1장을 덱에서 패에 넣는다.
+  zh-TW: |-
+    此卡名的②效果，１回合僅限使用１次。①：我方除了通常召喚以外僅限１次，可額外在我方主要階段召喚１隻「緹斯緹那」怪獸。②：可將我方場上的１隻正面表示怪獸做為對象發動（在我方場上存在光屬性的「緹斯緹那」怪獸的狀況下，也可將對方場上的１隻正面表示怪獸做為對象作為替代）。將該怪獸變為反面守備表示。其後，從牌組將１張「緹斯緹那的氣息」以外的「緹斯緹那」卡加入手牌。
+  zh-CN: |-
+    此卡名的②效果１回合仅可使用１次。 ①：自己除通常召唤外仅可追加１次，在自己的主要阶段召唤１只“蒂斯媞娜”怪兽。 ②：以场上的１只表侧表示怪兽为对象可以发动（自己场上存在光属性“蒂斯媞娜”怪兽的情况下，作为代替也可以对手场上的１只表侧表示怪兽作为对象）。将该怪兽改成里侧守备表示。然后，从牌组将“蒂斯媞娜的气息”以外的１张“蒂斯媞娜”卡加入手牌。
 card_type: Spell
 property: Continuous
 series:
@@ -67,3 +73,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993297
+master_duel_rarity: SR
