--- a/data/cards/85277313.yaml
+++ b/data/cards/85277313.yaml
@@ -7,8 +7,8 @@ name:
   fr: Signes de Tistina
   it: Segni di Tistina
   pt: Sinais da Tistina
-  ja:
-  ja_romaji:
+  ja: ティスティナの<ruby>胎<rt>たい</rt></ruby><ruby>動<rt>どう</rt></ruby>
+  ja_romaji: Tisutina no Taidō
   ko:
   ko_rr:
   zh-TW:
@@ -32,10 +32,18 @@ text:
   pt: |-
     Ative este card ao escolher 1 monstro com a face para cima no campo; Invoque este card por Invocação-Especial como um Monstro de Efeito (Aqua/LUZ/Nível 10/ATK 0/DEF 0) com o seguinte efeito (este card ainda é considerado uma Armadilha).
     ● Durante o turno do seu oponente, quando o alvo deixar o campo, destrua este card. Durante o turno do seu oponente, quando este card deixar o campo, destrua o alvo.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    ①：フィールドの表側表示モンスター１体を対象としてこのカードを発動できる。発動後、以下の効果を持つ効果モンスター（水族・光・星１０・攻／守０）となり、モンスターゾーンに特殊召喚する（罠カードとしても扱う）。
+    ●相手ターンに対象の表側表示モンスターがフィールドから離れた時にこのカードは破壊される。相手ターンにこのカードがフィールドから離れた時に対象の表側表示モンスターは破壊される。
+  ko: |-
+    ①: 필드의 앞면 표시 몬스터 1장을 대상으로 하고 이 카드를 발동할 수 있다. 발동 후, 이하의 효과를 가지는 효과 몬스터(물족 / 빛 / 레벨 10 / 공 0 / 수 0)가 되어, 몬스터 존에 특수 소환한다(함정 카드로도 취급한다).
+    ●상대 턴에 대상의 앞면 표시 몬스터가 필드에서 벗어났을 때에 이 카드는 파괴된다. 상대 턴에 이 카드가 필드에서 벗어났을 때에 대상의 앞면 표시 몬스터는 파괴된다.
+  zh-TW: |-
+    ①：可將場上的１隻正面表示怪獸做為對象發動此卡。發動後，變為持有以下效果的效果怪獸（水族・光・星１０・攻／守０），特殊召喚至怪獸區（也視為陷阱卡）。
+    ●對方回合，對象的正面表示怪獸從場上離開時，此卡將被破壞。對方回合，此卡從場上離開時，對象的正面表示怪獸將被破壞。
+  zh-CN: |-
+    ①：以场上的１只表侧表示怪兽为对象可以发动此卡。发动后，变为拥有以下效果的效果怪兽（水族・光・星１０・攻／守０），特殊召唤至怪兽区域（也视为陷阱卡）。
+    ●在对手回合中，对象的表侧表示怪兽从场上离开时，此卡将被破坏。在对手回合中，此卡从场上离开时，对象的表侧表示怪兽将被破坏。
 card_type: Trap
 property: Continuous
 series:
@@ -74,3 +82,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 993298
+master_duel_rarity: N
