--- a/data/cards/87498729.yaml
+++ b/data/cards/87498729.yaml
@@ -7,8 +7,8 @@ name:
   fr: Déchu de Tistina
   it: Caduto di Tistina
   pt: Caído da Tistina
-  ja:
-  ja_romaji:
+  ja: ティスティナの<ruby>落<rt>お</rt></ruby>とし<ruby>子<rt>ご</rt></ruby>
+  ja_romaji: Tisutina no Otoshigo
   ko:
   ko_rr:
   zh-TW:
@@ -26,10 +26,16 @@ text:
     Puoi mandare questa carta dalla tua mano o Terreno al Cimitero; metti 1 "Divino Dominio Baatistina" dal tuo Deck, scoperto nella tua Zona Terreno. Se una o più Magie/Trappole "Tistina" scoperte che controlli vengono distrutte dall'effetto di una carta dell'avversario, mentre questa carta è nel tuo Cimitero (eccetto durante il Damage Step): puoi bandire questa carta; Evoca Specialmente 1 mostro LUCE "Tistina" dalla tua mano, Deck o Cimitero. Puoi utilizzare ogni effetto di "Caduto di Tistina" una sola volta per turno.
   pt: |-
     Você pode enviar este card da sua mão ou do campo para o Cemitério; coloque 1 "Domínio Divino Baatistina" do seu Deck, com a face para cima na sua Zona do Campo. Se uma ou mais Magias/Armadilhas "Tistina" com a face para cima que você controla forem destruídas por um efeito de card do oponente, enquanto este card estiver no seu Cemitério (exceto durante a Etapa de Dano): você pode banir este card; Invoque por Invocação-Especial 1 monstro "Tistina" de LUZ da sua mão, do Deck ou do Cemitério. Você só pode usar cada efeito de "Caído da Tistina" uma vez por turno.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    このカード名の①②の効果はそれぞれ１ターンに１度しか使用できない。
+    ①：手札・フィールドのこのカードを墓地へ送って発動できる。デッキから「神域　バ＝ティスティナ」１枚を自分のフィールドゾーンに表側表示で置く。
+    ②：このカードが墓地に存在する状態で、自分フィールドの表側表示の「ティスティナ」魔法・罠カードが相手の効果で破壊された場合、このカードを除外して発動できる。自分の手札・デッキ・墓地から光属性の「ティスティナ」モンスター１体を特殊召喚する。
+  ko: |-
+    이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패 / 필드의 이 카드를 묘지로 보내고 발동할 수 있다. 덱에서 "신역 바＝티스티나" 1장을 자신의 필드 존에 앞면 표시로 놓는다. ②: 이 카드가 묘지에 존재하는 상태에서, 자신 필드의 앞면 표시의 "티스티나" 마법 / 함정 카드가 상대 효과로 파괴되었을 경우, 이 카드를 제외하고 발동할 수 있다. 자신의 패 / 덱 / 묘지에서 빛 속성의 "티스티나" 몬스터 1장을 특수 소환한다.
+  zh-TW: |-
+    此卡名的①②效果，１回合各僅限使用１次。 ①：可將手牌・場上的此卡送至墓地發動。從牌組將１張「神域 博緹斯緹那」以正面表示置於我方場地區。 ②：此卡存在於墓地的狀態，在我方場上的正面表示的「緹斯緹那」魔法・陷阱卡因對方的效果被破壞的狀況下，可將此卡除外發動。從我方手牌・牌組・墓地特殊召喚１隻光屬性的「緹斯緹那」怪獸。
+  zh-CN: |-
+    此卡名的①②效果１回合仅可各使用１次。 ①：将手牌・场上的此卡送至墓地可以发动。从牌组将１张“神域 巴蒂斯媞娜”以表侧表示放在自己的场地区域。 ②：此卡存在于墓地的状态下，自己场上表侧表示的“蒂斯媞娜”魔法・陷阱卡因对手的效果被破坏的情况下，将此卡除外可以发动。从自己的手牌・牌组・墓地将１只光属性“蒂斯媞娜”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Aqua / Effect
 attribute: WATER
@@ -72,3 +78,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019294
+master_duel_rarity: SR
