--- a/data/cards/87676171.yaml
+++ b/data/cards/87676171.yaml
@@ -32,10 +32,21 @@ text:
   pt: |-
     2 monstros de Nível 10
     Se este card for Invocado por Invocação-Especial: você pode enviar para o Cemitério todos os cards com a face para baixo que seu oponente controla. Você só pode usar este efeito de "Tistina, a Divindade que Desafia a Escuridão" uma vez por turno. Uma vez por turno, se este card tiver "Deus de Cristal Tistina" como matéria: você pode desassociar 1 matéria deste card; ele ganha 2000 de ATK até o final do turno do seu oponente. Se este card que você controla for destruído por um card do oponente enquanto ele tiver matéria: você pode Invocar por Invocação-Especial 1 monstro "Tistina" do seu Cemitério.
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
+  ja: |-
+    レベル１０モンスター×２
+    このカード名の①の効果は１ターンに１度しか使用できない。
+    ①：このカードが特殊召喚した場合に発動できる。相手フィールドの裏側表示カードを全て墓地へ送る。
+    ②：このカードが「結晶神ティスティナ」をＸ素材としている場合、１ターンに１度、このカードのＸ素材を１つ取り除いて発動できる。このカードの攻撃力は相手ターン終了時まで２０００アップする。
+    ③：Ｘ素材を持っているこのカードが相手によって破壊された場合に発動できる。自分の墓地から「ティスティナ」モンスター１体を特殊召喚する。
+  ko: |-
+    레벨 10 몬스터 × 2
+    이 카드명의 ①의 효과는 1턴에 1번밖에 사용할 수 없다. ①: 이 카드를 특수 소환했을 경우에 발동할 수 있다. 상대 필드의 뒷면 표시 카드를 전부 묘지로 보낸다. ②: 이 카드가 "결정신 티스티나"를 엑시즈 소재로 하고 있을 경우, 1턴에 1번, 이 카드의 엑시즈 소재를 1개 제거하여 발동할 수 있다. 이 카드의 공격력은 상대 턴 종료시까지 2000 올린다. ③: 엑시즈 소재를 가지고 있는 이 카드가 상대에 의해 파괴되었을 경우에 발동할 수 있다. 자신 묘지에서 "티스티나" 몬스터 1장을 특수 소환한다.
+  zh-TW: |-
+    等級１０怪獸×２
+    此卡名的①效果，１回合僅限使用１次。 ①：可在此卡特殊召喚的狀況下發動。將對方場上的所有反面表示卡全部送至墓地。 ②：在此卡以「結晶神緹斯緹那」做為超量素材的狀況下，１回合１次，可去除此卡的１個超量素材發動。此卡的攻擊力在對方回合結束前提升２０００。 ③：可在擁有超量素材的此卡被對方破壞的狀況下發動。從我方墓地特殊召喚１隻「緹斯緹那」怪獸。
+  zh-CN: |-
+    等级１０怪兽×２
+    此卡名的①效果１回合仅可使用１次。 ①：此卡特殊召唤的情况下可以发动。将对手场上的里侧表示卡全部送至墓地。 ②：此卡以“结晶神蒂斯媞娜”作为超量素材的情况下，１回合１次，去除此卡的１个超量素材可以发动。此卡的攻击力直至对手回合结束时为止上升２０００。 ③：拥有超量素材的此卡被对手破坏的情况下可以发动。从自己的墓地将１只“蒂斯媞娜”怪兽特殊召唤。
 card_type: Monster
 monster_type_line: Aqua / Xyz / Effect
 attribute: LIGHT
@@ -83,3 +94,4 @@ limit_regulation:
   tcg: Unlimited
   ocg: Not yet released
 yugipedia_page_id: 1019301
+master_duel_rarity: UR
