--- a/src/assignments/assignments.yaml
+++ b/src/assignments/assignments.yaml
@@ -28,6 +28,9 @@
 # Fire King Consort Ulkanix
 - yugipedia: 1033044
   fake_password: 100295801
+# Ancient Gear Dragon
+- yugipedia: 1044527
+  fake_password: 100200252
 # Spell Card: "Monster Reborn"
 - yugipedia: 1035520
   fake_password: 100200250
@@ -49,3 +52,5 @@
 # The Valuable Book EX 4 promotional cards
 - set_abbreviation: VX04
   fake_password_range: 100436000
+
+
