--- a/data/rush/yugipedia1046291.yaml
+++ b/data/rush/yugipedia1046291.yaml
@@ -14,7 +14,7 @@ name:
   zh-CN:
 requirement:
   en: |-
-    TBA
+    During the turn you Normal Summoned this card.
   de:
   es:
   fr:
@@ -26,7 +26,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    TBA
+    Excavate the top 4 cards of your Deck. You can add 1 excavated "Space Yggdrago" or 1 excavated Cyberse Type Maximum Monster to your hand. Place the remaining cards on the top of your Deck in any order.
   de:
   es:
   fr:
